More corrections, add back annotations

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -12,14 +12,14 @@ One method of performing time-frequency analysis is to multiply the signal being
 
 Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio \parencite{musicsepgood, musicmask}. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture.\footnote{Thanks to Fabian-Robert St{\"o}ter for the discussion on the difference between music source separation, demixing, and unmixing.} Music demixing systems commonly split mixed songs into four sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of mixing and demixing datasets \parencite{sisec2016, otherdataset2, musdb18, musdb18hq}.
 
-The STFT is a popular tool used by various music demixing systems throughout the years \parencite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}. However, the STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot have maximal resolution in both time and frequency, and must trade them off by changing the duration of the window \parencite{gabor1946, gabordiagrams}.
+The STFT is a popular tool used by various music demixing systems throughout the years \parencite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}. However, the STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot have maximal resolution in both time and frequency, and can trade them off by changing the duration and the type of the window \parencite{gabor1946, gabordiagrams}.
 
 The tradeoff in time-frequency resolution is an important consideration in music demixing \parencite{tftradeoff1, tftradeoff2}. Systems have been proposed that use multiple STFTs \parencite{fitzgerald2, driedger} or that replace the STFT with different time-frequency transforms \parencite{fitzgerald2, cqtseparation, bettermusicsep}, to improve results through the manipulation of time-frequency resolution.
 
 \subsection{Motivation}
 \label{sec:motivation}
 
-Musical signals have characteristics that lead to conflicting requirements in the STFT. According to \textcite{doerflerphd}, music needs to be analyzed with long-duration windows in the low-frequency region for a high frequency resolution, because the bass notes lay the harmonic basis of a song. Conversely, the high-frequency region contains transients and broadband sounds, which are useful for timbre identification and rhythm; these transients have fast attacks and decays and need to be analyzed with short-duration windows \parencite{doerflerphd}. \citeauthor{cqtransient} similarly state that
+Musical signals have characteristics that lead to conflicting requirements in the STFT. According to \textcite{doerflerphd}, music needs to be analyzed with long-duration windows in the low-frequency region for a high frequency resolution, because the bass notes lay the harmonic basis of a song. Conversely, the high-frequency region contains broadband sounds and components of transients, which are useful for timbre identification and rhythm; these transients have fast attacks and decays and need to be analyzed with short-duration windows \parencite{doerflerphd}. \citeauthor{cqtransient} similarly state that
 
 \begin{quote}
 	a well known disadvantage of the STFT is the rigid time-frequency resolution trade-off providing a constant absolute frequency resolution throughout the entire range of audible frequencies. In contrast to this we know that due to both musical and auditory aspects frequency resolution is preferred that increases from high to low frequencies (and vice versa for time resolution) \parencite[1]{cqtransient}.
