--- a/latex/report.tex
+++ b/latex/report.tex
@@ -2,12 +2,14 @@
 \usepackage[svgnames]{xcolor}
 \usepackage{setspace}
 \usepackage{framed}
+\usepackage{soul} % for annotations
 \usepackage{subfiles}
 \usepackage[left=1in, right=1in, top=1in, bottom=1in]{geometry}
 \usepackage[shortlabels]{enumitem}
 \usepackage{graphicx}
 \usepackage{svg}
-\usepackage{xfrac}
+\usepackage{xfrac} % for annotations
+\usepackage{todonotes}
 \usepackage{afterpage}
 \usepackage{amsmath}
 \usepackage[titletoc,title]{appendix}
@@ -77,6 +79,10 @@
 	\clearpage
 }
 
+\newcommand{\explanation}{
+        \todo[inline,color=green!40]
+}
+
 \DeclareCiteCommand{\secondaryciteauthor}{}{\printtext[bibhyperref]{\printnames{labelname}}}{}{}
 \DeclareCiteCommand{\secondaryciteyear}{}{\bibhyperref{\printdate}}{\multicitedelim}{}
 \newcommand{\secondarycitedirect}[2]{\secondaryciteauthor{#1} (\secondaryciteyear{#1}, cited in \secondaryciteauthor{#2}, \secondaryciteyear{#2})}
@@ -92,6 +98,11 @@
 
 \renewcommand\listingscaption{Code Listing}
 \renewcommand\listoflistingscaption{List of Code Listings}
+
+\colorlet{shadecolor}{blue!15}
+%\colorlet{hlcolor}{blue!10}
+
+\DeclareRobustCommand{\hlblu}[1]{{\sethlcolor{shadecolor}\hl{#1}}}
 
 \renewcommand{\maketitle}{
   \begin{center}
